# python-workout

./: .gitignore  LICENSE  README.md  pyproject.toml
numeric/: guessing_word_game.py  number_and_base_guessing_game.py  number_guessing_game.py  summing_numbers.py
src/python_workout_pkg/: base.py  exercise_models.py  exercise_registry.py  main.py
src/python_workout_pkg/exercises/numeric/: hexadecmal_output.py  name_triangle.py  number_guessing_game.py  run_timing.py  summing_numbers.py
src/python_workout_pkg/exercises/strings/pig_latin/: __init__.py  pig_latin_new.py
src/python_workout_pkg/numeric/: float_numbers_transform.py  guessing_word_game.py  hexadecmal_output.py  name_triangle.py  number_and_base_guessing_game.py  run_timing.py  summing_numbers.py
src/python_workout_pkg/shared/cli/: __init__.py  collectors.py  handlers.py
src/python_workout_pkg/utils/: cli.py
tests/numeric/: test_hexadecimal_output.py  test_run_timing.py  test_summing_numbers.py  test_transform_float_numbers.py
tests/strings/: test_pig_latin.py
