[project]
name = "python-workout"
version = "0.1.0"
authors = [
  { name="Sergey Vorobiev", email="vorobevsy@gmail.com" },
]
description = "A Python project for practicing and improving Python programming skills."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT AND (Apache-2.0)"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "pydantic[email,timezone]>=2.12.5",
]

[project.urls]
Homepage = "https://github.com/sergeyvuser/python-workout"
Issues = "https://github.com/sergeyvuser/python-workout/issues"

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "python_workout_pkg"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "pip>=26.0.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]

[tool.pytest]
minversion = "9.0"
addopts = [
    #"-ra",
    #"-q",
    "-vv",
    "--import-mode=importlib",
]
testpaths = [
    "tests",
    "integration",
]
strict = true
